2000-06-19  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc-wl.el (mhc-wl/date-to-folder): Fixed.
	(mhc-wl-summary-display-article): Implemented.
	(mhc-wl/date-to-folder): Fixed.
	(mhc-wl-summary-display-article): Implemented.
	(mhc-wl-summary-mode-setup): Added workaround for 'N' and 'P'.
	(mhc-wl-insert-summary-contents): Ditto.
	(mhc-wl/schedule-foldermsg): Eliminated.

2000-06-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/mhc-ps.el (mhc-ps-left-margin): New variable.
	(mhc-ps-string-width): New variable.
	(mhc-ps/compose-subject): New function.
	(mhc-ps/schedule-to-string): Add handling long subject.
	(mhc-ps/make-contents): Fix order of schedules.

2000-06-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/mhc-summary.el (mhc-summary-search-date): Renamed
	`mhc-summary-search-day'.
	* emacs/mhc.el (mhc-goto-today): Replace `mhc-summary-search-day'
	with `mhc-summary-search-date'.
	* emacs/mhc-wl.el (mhc-wl-search-date): Renamed `mhc-wl-search-day'.
	* emacs/mhc-mew.el (mhc-mew-search-date): Renamed `mhc-mew-search-day'.
	* emacs/mhc-gnus.el (mhc-gnus-search-date): Renamed `mhc-gnus-search-day'.

2000-06-19  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* emacs/mhc.el (mhc-goto-today): Use mhc-summary-search-day().
	* emacs/mhc-summary.el (mhc-summary-search-day): New function, for search YY MM DD in summary-buffer.
	* emacs/mhc-wl.el (mhc-wl-summary-search-day): Ditto.
	* emacs/mhc-gnus.el (mhc-gnus-summary-search-day): Ditto.
	* emacs/mhc-mew.el (mhc-mew-summary-search-day): Ditto.
	(mhc-mew/header-string-review): New constant, header-string when schedule exist.
	(mhc-mew-insert-summary-contents): If shedule exist, put review mark.
	
2000-06-19  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc.el (mhc-goto-today): Fix typo.

2000-06-19  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/mhc.el (mhc-setup): Add autoload definition of
	`mhc-ps-preview' and `mhc-ps-print'.
